--- a/thesis.tex
+++ b/thesis.tex
@@ -129,13 +129,15 @@
 
 % ******************************** Main Matter *********************************
 \mainmatter
-\include{Preface/preface}
-\include{Chapters/Introduction/chapter}
-\include{Chapters/Make - Understanding the Molecular Transformer/chapter}
-\include{Chapters/Design - QSAR with SOAP-GP/chapter}
-\include{Chapters/Design - FRESCO/chapter}
-\include{Chapters/Test - COVID Moonshot/chapter}
-\include{Chapters/Future Work/chapter}
+
+% TODO - update chapter names
+\include{Chapters/Preface/preface}
+\include{Chapters/Ch1/intro}
+\include{Chapters/Ch2/fresco}
+\include{Chapters/Ch3/ranking}
+\include{Chapters/Ch4/transformer}
+\include{Chapters/Ch5/test}
+\include{Chapters/Ch6/outlook}
 %\include{Chapter6/chapter6}
 %\include{Chapter7/chapter7}
 
@@ -156,6 +158,7 @@
 \bibliographystyle{unsrt} % Use for unsorted references  
 % \bibliographystyle{plainnat} % use this to have URLs listed in References
 \cleardoublepage
+% TODO - get references working
 \bibliography{References/references} % Path to your References.bib file
 
 
