--- a/Acknowledgement/acknowledgement.tex
+++ b/Acknowledgement/acknowledgement.tex
@@ -1,7 +1,7 @@
 % ************************** Thesis Acknowledgements **************************
 
 \begin{acknowledgements}
-
+TODO - finish acknowledgements
 And I would like to acknowledge ...
 
 \begin{itemize}
