--- a/References/references.bib
+++ b/References/references.bib
@@ -1526,7 +1526,7 @@
   journal       = {Nature},
   number        = {7890},
   pages         = {759--764},
-  title         = {Structures of the $\sigma$2 receptor enable docking for bioactive ligand discovery},
+  title         = {Structures of the $$\sigma$$2 receptor enable docking for bioactive ligand discovery},
   ty            = {JOUR},
   url           = {https://doi.org/10.1038/s41586-021-04175-x},
   volume        = {600},
@@ -2029,7 +2029,7 @@
   journal = {Nature},
   number  = {7890},
   pages   = {759--764},
-  title   = {Structures of the σ2 receptor enable docking for bioactive ligand discovery},
+  title   = {Structures of the $$\sigma$$2 receptor enable docking for bioactive ligand discovery},
   volume  = {600},
   year    = {2021}
 }
@@ -2039,7 +2039,7 @@
   journal = {Science},
   number  = {6614},
   pages   = {eabn7065},
-  title   = {Structure-based discovery of nonopioid analgesics acting through the $$\alpha_{2A}$-adrenergic receptor},
+  title   = {Structure-based discovery of nonopioid analgesics acting through the $$\alpha_{2A}$$-adrenergic receptor},
   volume  = {377},
   year    = {2022}
 }
