--- a/thesis.tex
+++ b/thesis.tex
@@ -138,10 +138,6 @@
 \include{Chapters/Ch4/transformer}
 \include{Chapters/Ch5/test}
 \include{Chapters/Ch6/outlook}
-%\include{Chapter6/chapter6}
-%\include{Chapter7/chapter7}
-
-
 
 % ********************************** Back Matter *******************************
 % Backmatter should be commented out, if you are using appendices after References
@@ -154,8 +150,8 @@
 % Bibliography style previews: http://nodonn.tipido.net/bibstyle.php
 % Reference styles: http://sites.stat.psu.edu/~surajit/present/bib.htm
 
-% \bibliographystyle{apalike}
-\bibliographystyle{unsrt} % Use for unsorted references  
+\bibliographystyle{apalike}
+% \bibliographystyle{unsrt} % Use for unsorted references  
 % \bibliographystyle{plainnat} % use this to have URLs listed in References
 \cleardoublepage
 % TODO - get references working
