--- a/thesis.tex
+++ b/thesis.tex
@@ -1,7 +1,7 @@
 % ******************************* PhD Thesis Template **************************
 % Please have a look at the README.md file for info on how to use the template
 
-\documentclass[a4paper, 12pt, times, numbered, draft]{Classes/PhDThesisPSnPDF}
+\documentclass[a4paper, 12pt, times, numbered, draft, chapter]{Classes/PhDThesisPSnPDF}
 
 % ******************************************************************************
 % ******************************* Class Options ********************************
@@ -103,7 +103,8 @@
 % To use choose `chapter' option in the document class
 
 \ifdefineChapter
- 	\includeonly{Chapters/Preface/preface}
+ 	% \includeonly{Chapters/Preface/preface}
+ 	\includeonly{Chapters/Crude/test}
 \fi
 
 % ******************************** Front Matter ********************************
