added nanomolar refs

--- a/References/references.bib
+++ b/References/references.bib
@@ -2064,3 +2064,35 @@
   volume  = {3},
   year    = {2021}
 }
+
+
+@article{Gehrtz2022nanomolar,
+  author  = {Gehrtz, Paul and Marom, Shir and B{\"u}hrmann, Mike and Hardick, Julia and Kleinb{\"o}lting, Silke and Shraga, Amit and Dubiella, Christian and Gabizon, Ronen and Wiese, Jan N. and M{\"u}ller, Matthias P. and Cohen, Galit and Babaev, Ilana and Shurrush, Khriesto and Avram, Liat and Resnick, Efrat and Barr, Haim and Rauh, Daniel and London, Nir},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {15},
+  pages   = {10341-10356},
+  title   = {Optimization of Covalent MKK7 Inhibitors via Crude Nanomole-Scale Libraries},
+  volume  = {65},
+  year    = {2022}
+}
+
+@article{Perera2018PfizerNanomolar,
+  author  = {Damith Perera and Joseph W. Tucker and Shalini Brahmbhatt and Christopher J. Helal and Ashley Chong and William Farrell and Paul Richardson and Neal W. Sach},
+  journal = {Science},
+  number  = {6374},
+  pages   = {429-434},
+  title   = {A platform for automated nanomole-scale reaction screening and micromole-scale synthesis in flow},
+  volume  = {359},
+  year    = {2018}
+}
+
+
+@article{Santarilla2015MerckNanomolar,
+  author  = {Alexander Buitrago Santanilla and Erik L. Regalado and Tony Pereira and Michael Shevlin and Kevin Bateman and Louis-Charles Campeau and Jonathan Schneeweis and Simon Berritt and Zhi-Cai Shi and Philippe Nantermet and Yong Liu and Roy Helmy and Christopher J. Welch and Petr Vachal and Ian W. Davies and Tim Cernak and Spencer D. Dreher},
+  journal = {Science},
+  number  = {6217},
+  pages   = {49-53},
+  title   = {Nanomole-scale high-throughput chemistry for the synthesis of complex molecules},
+  volume  = {347},
+  year    = {2015}
+}
