DNA library ML reference

--- a/References/references.bib
+++ b/References/references.bib
@@ -2096,3 +2096,14 @@
   volume  = {347},
   year    = {2015}
 }
+
+
+@article{McCloskey2020DNALibrary,
+  author  = {McCloskey, Kevin and Sigel, Eric A. and Kearnes, Steven and Xue, Ling and Tian, Xia and Moccia, Dennis and Gikunju, Diana and Bazzaz, Sana and Chan, Betty and Clark, Matthew A. and Cuozzo, John W. and Gui{\'e}, Marie-Aude and Guilinger, John P. and Huguet, Christelle and Hupp, Christopher D. and Keefe, Anthony D. and Mulhern, Christopher J. and Zhang, Ying and Riley, Patrick},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {16},
+  pages   = {8857-8866},
+  title   = {Machine Learning on DNA-Encoded Libraries: A New Paradigm for Hit Finding},
+  volume  = {63},
+  year    = {2020}
+}
