fresco chapter draft

--- a/Appendix/Appendix1/appendix1.tex
+++ b/Appendix/Appendix1/appendix1.tex
@@ -3,6 +3,10 @@
 \chapter{Model Implementation Details} \label{appendix:details}
 
 \section{FRESCO}
+All data and code used for this work can be found in the GitHub repo \url{https://github.com/wjm41/frag-pcore-screen}. Supplementary figures and tables can be found in an accompanying file.
+
 \section{Ranking model}
+Our training set, de novo design method and generated molecules are available on \url{https://github.com/wjm41/mpro-rank-gen}.
+
 \section{Transformer model}
 \section{}
