--- a/thesis.tex
+++ b/thesis.tex
@@ -104,7 +104,8 @@
 
 \ifdefineChapter
  	% \includeonly{Chapters/Preface/preface}
- 	\includeonly{Chapters/Crude/test}
+ 	% \includeonly{Chapters/Crude/test}
+ 	\includeonly{Chapters/Fresco/fresco}
 \fi
 
 % ******************************** Front Matter ********************************
@@ -177,8 +178,8 @@
 
 \begin{appendices} % Using appendices environment for more functionality
 
-% \include{Appendix1/appendix1}
-% \include{Appendix2/appendix2}
+\include{Appendix/Appendix1/appendix1}
+\include{Appendix/Appendix2/appendix2}
 
 \end{appendices}
 
