added transformer references

--- a/References/references.bib
+++ b/References/references.bib
@@ -1,3 +1,5 @@
+%TODO - check duplicate entries
+
 @article{Schwaller2019MolecularPrediction,
   title   = {{Molecular Transformer - A Model for Uncertainty-Calibrated Chemical Reaction Prediction}},
   year    = {2019},
@@ -2106,4 +2108,446 @@
   title   = {Machine Learning on DNA-Encoded Libraries: A New Paradigm for Hit Finding},
   volume  = {63},
   year    = {2020}
+}
+
+@article{tetko2020state,
+  title     = {State-of-the-art augmented NLP transformer models for direct and single-step retrosynthesis},
+  author    = {Tetko, Igor V and Karpov, Pavel and Van Deursen, Ruud and Godin, Guillaume},
+  journal   = {Nature communications},
+  volume    = {11},
+  number    = {1},
+  pages     = {1--11},
+  year      = {2020},
+  publisher = {Nature Publishing Group}
+}
+
+@article{blakemore2018organic,
+  title     = {Organic synthesis provides opportunities to transform drug discovery},
+  author    = {Blakemore, David C and Castro, Luis and Churcher, Ian and Rees, David C and Thomas, Andrew W and Wilson, David M and Wood, Anthony},
+  journal   = {Nature chemistry},
+  volume    = {10},
+  number    = {4},
+  pages     = {383},
+  year      = {2018},
+  publisher = {Nature Publishing Group}
+}
+
+@article{schreck2019learning,
+  title     = {Learning Retrosynthetic Planning through Simulated Experience},
+  author    = {Schreck, John S and Coley, Connor W and Bishop, Kyle JM},
+  journal   = {ACS Central Science},
+  volume    = {5},
+  number    = {6},
+  pages     = {970},
+  year      = {2019},
+  publisher = {ACS Publications}
+}
+
+@article{segler2018planning,
+  title     = {Planning chemical syntheses with deep neural networks and symbolic AI},
+  author    = {Segler, Marwin HS and Preuss, Mike and Waller, Mark P},
+  journal   = {Nature},
+  volume    = {555},
+  number    = {7698},
+  pages     = {604},
+  year      = {2018},
+  publisher = {Nature Publishing Group}
+}
+
+@article{bostrom2018expanding,
+  title     = {Expanding the medicinal chemistry synthetic toolbox},
+  author    = {Bostr{\"o}m, Jonas and Brown, Dean G and Young, Robert J and Keser{\"u}, Gy{\"o}rgy M},
+  journal   = {Nature Reviews Drug Discovery},
+  year      = {2018},
+  publisher = {Nature Publishing Group}
+}
+
+@article{Struble2020,
+  author  = {Struble, Thomas J. and Alvarez, Juan C. and Brown, Scott P. and Chytil, Milan and Cisar, Justin and DesJarlais, Renee L. and Engkvist, Ola and Frank, Scott A. and Greve, Daniel R. and Griffin, Daniel J. and Hou, Xinjun and Johannes, Jeffrey W. and Kreatsoulas, Constantine and Lahue, Brian and Mathea, Miriam and Mogk, Georg and Nicolaou, Christos A. and Palmer, Andrew D. and Price, Daniel J. and Robinson, Richard I. and Salentin, Sebastian and Xing, Li and Jaakkola, Tommi and Green, William. H. and Barzilay, Regina and Coley, Connor W. and Jensen, Klavs F.},
+  title   = {Current and Future Roles of Artificial Intelligence in Medicinal Chemistry Synthesis},
+  journal = {Journal of Medicinal Chemistry},
+  volume  = {63},
+  number  = {16},
+  pages   = {8667-8682},
+  year    = {2020},
+  doi     = {10.1021/acs.jmedchem.9b02120},
+  note    = {PMID: 32243158},
+  url     = { 
+             https://doi.org/10.1021/acs.jmedchem.9b02120
+             },
+  eprint  = { 
+             https://doi.org/10.1021/acs.jmedchem.9b02120
+             }
+}
+
+
+@article{Bjerrun2020,
+  author    = {Thakkar, Amol and Kogej, Thierry and Reymond, Jean-Louis and Engkvist, Ola and Bjerrum, Esben Jannik},
+  title     = {Datasets and their influence on the development of computer assisted synthesis planning tools in the pharmaceutical domain},
+  journal   = {Chem. Sci.},
+  year      = {2020},
+  volume    = {11},
+  issue     = {1},
+  pages     = {154-168},
+  publisher = {The Royal Society of Chemistry},
+  doi       = {10.1039/C9SC04944D},
+  url       = {http://dx.doi.org/10.1039/C9SC04944D}
+}
+
+@article{Jia2019,
+  title   = {{Anthropogenic biases in chemical reaction data hinder exploratory inorganic synthesis.}},
+  year    = {2019},
+  journal = {Nature},
+  author  = {Jia, Xiwen and Lynch, Allyson and Huang, Yuheng and Danielson, Matthew and  Lang’at, Immaculate and Milder, Alexander and Ruby, Aaron E. and Wang, Hao and Friedler, Sorelle A. and Norquist, Alexander J.  and Schrier, Joshua},
+  volume  = {573},
+  pages   = {251-255},
+  url     = {https://doi.org/10.1038/s41586-019-1540-5},
+  doi     = {10.1038/s41586-019-1540-5}
+}
+
+@article{Schwaller2019,
+  title   = {{Molecular Transformer - A Model for Uncertainty-Calibrated Chemical Reaction Prediction}},
+  year    = {2019},
+  journal = {ACS Central Science},
+  author  = {Schwaller, Philippe and Laino, Teodoro and Gaudin, Théophile and Bolgar, Peter and Bekas, Costas and Lee, Alpha A.},
+  number  = {9},
+  month   = {11},
+  pages   = {1572--1583},
+  volume  = {5},
+  url     = {http://arxiv.org/abs/1811.02633 http://dx.doi.org/10.1021/acscentsci.9b00576},
+  doi     = {10.1021/acscentsci.9b00576},
+  issn    = {2374-7943},
+  arxivid = {1811.02633}
+}
+
+@article{Sundararajan2017,
+  title   = {{Axiomatic attribution for deep networks}},
+  year    = {2017},
+  journal = {34th International Conference on Machine Learning, ICML 2017},
+  author  = {Sundararajan, Mukund and Taly, Ankur and Yan, Qiqi},
+  pages   = {5109--5118},
+  volume  = {7},
+  isbn    = {9781510855144},
+  arxivid = {1703.01365}
+}
+
+@misc{Kovacs2020MolecularExplainer,
+  title        = {{Molecular Transformer Explainer}},
+  author       = {Kovacs, David P and McCorkindale, William and Lee, Alpha A.},
+  howpublished = {\url{https://github.com/davkovacs/MTExplainer.git}}
+}
+
+@article{McCloskey2019,
+  title    = {{Using attribution to decode binding mechanism in neural network models for chemistry}},
+  year     = {2019},
+  journal  = {Proceedings of the National Academy of Sciences of the United States of America},
+  author   = {McCloskey, Kevin and Taly, Ankur and Monti, Federico and Brenner, Michael P. and Colwell, Lucy J.},
+  number   = {24},
+  pages    = {11624--11629},
+  volume   = {116},
+  isbn     = {1820657116},
+  doi      = {10.1073/pnas.1820657116},
+  issn     = {10916490},
+  pmid     = {31127041},
+  keywords = {Attribution for molecules, Deep learning, Virtual screening}
+}
+
+@article{Lluch1993,
+  title    = {{Regio- and chemoselective epoxidation of fluorinated monoterpenes and sesquiterpenes by dioxiranes}},
+  year     = {1993},
+  journal  = {Tetrahedron},
+  author   = {Lluch, Anna Maria and S{\'{a}}nchez-Baeza, Francisco and Messeguer, Angel and Fusco, Caterina and Curci, Ruggero},
+  number   = {28},
+  pages    = {6299--6308},
+  volume   = {49},
+  doi      = {10.1016/S0040-4020(01)87967-9},
+  issn     = {00404020},
+  keywords = {Epoxidation. Dimethyldioxirane. Methyl(trifluorome}
+}
+
+@article{Coley19WLDN5,
+  author    = {Coley, Connor W. and Jin, Wengong and Rogers, Luke and Jamison, Timothy F. and Jaakkola, Tommi S. and Green, William H. and Barzilay, Regina and Jensen, Klavs F.},
+  title     = {A graph-convolutional neural network model for the prediction of chemical reactivity},
+  journal   = {Chem. Sci.},
+  year      = {2019},
+  volume    = {10},
+  issue     = {2},
+  pages     = {370-377},
+  publisher = {The Royal Society of Chemistry},
+  doi       = {10.1039/C8SC04228D},
+  url       = {http://dx.doi.org/10.1039/C8SC04228D}
+}
+
+@misc{Friedel1877,
+  title     = {{Sur une nouvelle m{\'{e}}thode g{\'{e}}n{\'{e}}rale de synth{\`{e}}se d’hydrocarbures, d’ac{\'{e}}tones, etc.}},
+  year      = {1877},
+  author    = {Friedel, Charles and Crafts, James},
+  publisher = {French Patent}
+}
+
+@article{Bajusz2015Tanimoto,
+  author  = {Bajusz, D{\'{a}}vid and R{\'{a}}cz, Anita and H{\'{e}}berger, K{\'{a}}roly},
+  doi     = {10.1186/s13321-015-0069-3},
+  issn    = {1758-2946},
+  journal = {Journal of Cheminformatics},
+  number  = {1},
+  pages   = {20},
+  title   = {{Why is Tanimoto index an appropriate choice for fingerprint-based similarity calculations?}},
+  url     = {https://doi.org/10.1186/s13321-015-0069-3},
+  volume  = {7},
+  year    = {2015}
+}
+
+@inproceedings{Stanovsky2019GenderBias,
+  title     = {Evaluating Gender Bias in Machine Translation},
+  author    = {Stanovsky, Gabriel  and
+               Smith, Noah A.  and
+               Zettlemoyer, Luke},
+  booktitle = {Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics},
+  month     = jul,
+  year      = {2019},
+  address   = {Florence, Italy},
+  publisher = {Association for Computational Linguistics},
+  url       = {https://www.aclweb.org/anthology/P19-1164},
+  doi       = {10.18653/v1/P19-1164},
+  pages     = {1679--1684}
+}
+
+@article{Johansson2020,
+  title   = {AI-assisted synthesis prediction},
+  journal = {Drug Discovery Today: Technologies},
+  year    = {2020},
+  issn    = {1740-6749},
+  doi     = {https://doi.org/10.1016/j.ddtec.2020.06.002},
+  url     = {http://www.sciencedirect.com/science/article/pii/S1740674920300020},
+  author  = {Simon Johansson and Amol Thakkar and Thierry Kogej and Esben Bjerrum and Samuel Genheden and Tomas Bastys and Christos Kannas and Alexander Schliep and Hongming Chen and Ola Engkvist}
+}
+
+@article{Lee2019,
+  author    = {Lee, Alpha A. and Yang, Qingyi and Sresht, Vishnu and Bolgar, Peter and Hou, Xinjun and Klug-McLeod, Jacquelyn L. and Butler, Christopher R.},
+  title     = {Molecular Transformer unifies reaction prediction and retrosynthesis across pharma chemical space},
+  journal   = {Chem. Commun.},
+  year      = {2019},
+  volume    = {55},
+  issue     = {81},
+  pages     = {12152-12155},
+  publisher = {The Royal Society of Chemistry},
+  doi       = {10.1039/C9CC05122H},
+  url       = {http://dx.doi.org/10.1039/C9CC05122H}
+}
+
+@article{Mayr2018compare,
+  author    = {Mayr, Andreas and Klambauer, Günter and Unterthiner, Thomas and Steijaert, Marvin and Wegner, Jörg K. and Ceulemans, Hugo and Clevert, Djork-Arné and Hochreiter, Sepp},
+  title     = {Large-scale comparison of machine learning methods for drug target prediction on ChEMBL},
+  journal   = {Chem. Sci.},
+  year      = {2018},
+  volume    = {9},
+  issue     = {24},
+  pages     = {5441-5451},
+  publisher = {The Royal Society of Chemistry},
+  doi       = {10.1039/C8SC00148K},
+  url       = {http://dx.doi.org/10.1039/C8SC00148K}
+}
+
+@article{Schneider2015rxnfp,
+  author  = {Schneider, Nadine and Lowe, Daniel M. and Sayle, Roger A. and Landrum, Gregory A.},
+  title   = {Development of a Novel Fingerprint for Chemical Reactions and Its Application to Large-Scale Reaction Classification and Similarity},
+  journal = {Journal of Chemical Information and Modeling},
+  volume  = {55},
+  number  = {1},
+  pages   = {39-53},
+  year    = {2015},
+  doi     = {10.1021/ci5006614},
+  note    = {PMID: 25541888},
+  url     = { 
+             https://doi.org/10.1021/ci5006614
+             
+             },
+  eprint  = { 
+             https://doi.org/10.1021/ci5006614
+             
+             }
+}
+
+@article{grubbs,
+  author  = {Trnka, Tina M. and Grubbs, Robert H.},
+  title   = {The Development of L2X2RuCHR Olefin Metathesis Catalysts: An Organometallic Success Story},
+  journal = {Accounts of Chemical Research},
+  volume  = {34},
+  number  = {1},
+  pages   = {18-29},
+  year    = {2001},
+  doi     = {10.1021/ar000114f},
+  note    = {PMID: 11170353},
+  url     = { 
+             https://doi.org/10.1021/ar000114f
+             
+             },
+  eprint  = { 
+             https://doi.org/10.1021/ar000114f
+             }
+}
+
+@misc{fc_para1981,
+  author      = {Vandenberk, J. and Kennis, L. E. J. and Van Heertum, A. H. M. Th. and  Van der Aa, M. J. M. C. },
+  title       = {1,3-Dihydro-1-[(1-piperidinyl)alkyl]-2H-benzimidazol-2-one derivatives},
+  year        = {1981},
+  nationality = {United States},
+  number      = {4254127}
+}
+
+@article{guan_coley_robust,
+  author    = {Guan, Yanfei and Coley, Connor W. and Wu, Haoyang and Ranasinghe, Duminda and Heid, Esther and Struble, Thomas J. and Pattanaik, Lagnajit and Green, William H. and Jensen, Klavs F.},
+  title     = {Regio-selectivity prediction with a machine-learned reaction representation and on-the-fly quantum mechanical descriptors},
+  journal   = {Chem. Sci.},
+  year      = {2021},
+  volume    = {12},
+  issue     = {6},
+  pages     = {2198-2208},
+  publisher = {The Royal Society of Chemistry},
+  doi       = {10.1039/D0SC04823B},
+  url       = {http://dx.doi.org/10.1039/D0SC04823B}
+}
+
+@misc{segler2019world,
+  title         = {World Programs for Model-Based Learning and Planning in Compositional State and Action Spaces},
+  author        = {Marwin H. S. Segler},
+  year          = {2019},
+  eprint        = {1912.13007},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG}
+}
+
+@misc{sacha2020molecule,
+  title         = {Molecule Edit Graph Attention Network: Modeling Chemical Reactions as Sequences of Graph Edits},
+  author        = {Mikołaj Sacha and Mikołaj Błaż and Piotr Byrski and Paweł Włodarczyk-Pruszyński and Stanisław Jastrzębski},
+  year          = {2020},
+  eprint        = {2006.15426},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG}
+}
+
+@misc{bradshaw2019generative,
+  title         = {A Generative Model For Electron Paths},
+  author        = {John Bradshaw and Matt J. Kusner and Brooks Paige and Marwin H. S. Segler and José Miguel Hernández-Lobato},
+  year          = {2019},
+  eprint        = {1805.10970},
+  archiveprefix = {arXiv},
+  primaryclass  = {physics.chem-ph}
+}
+
+@article{segler2017neural,
+  author   = {Segler, Marwin H. S. and Waller, Mark P.},
+  title    = {Neural-Symbolic Machine Learning for Retrosynthesis and Reaction Prediction},
+  journal  = {Chemistry – A European Journal},
+  volume   = {23},
+  number   = {25},
+  pages    = {5966-5971},
+  keywords = {artificial intelligence, machine learning, retrosynthesis, synthesis design, total synthesis},
+  doi      = {https://doi.org/10.1002/chem.201605499},
+  url      = {https://chemistry-europe.onlinelibrary.wiley.com/doi/abs/10.1002/chem.201605499},
+  year     = {2017}
+}
+
+@article{tetko2002,
+  author  = {Tetko, Igor V.},
+  title   = {Neural Network Studies. 4. Introduction to Associative Neural Networks},
+  journal = {Journal of Chemical Information and Computer Sciences},
+  volume  = {42},
+  number  = {3},
+  pages   = {717-728},
+  year    = {2002},
+  doi     = {10.1021/ci010379o},
+  note    = {PMID: 12086534},
+  url     = { 
+             https://doi.org/10.1021/ci010379o
+             },
+  eprint  = { 
+             https://doi.org/10.1021/ci010379o
+             }
+}
+
+
+@misc{mudrakarta2018didold,
+  title         = {Did the Model Understand the Question?},
+  author        = {Pramod Kaushik Mudrakarta and Ankur Taly and Mukund Sundararajan and Kedar Dhamdhere},
+  year          = {2018},
+  eprint        = {1805.05492},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL}
+}
+
+@inproceedings{mudrakarta2018did,
+  title     = {Did the Model Understand the Question?},
+  author    = {Mudrakarta, Pramod Kaushik  and
+               Taly, Ankur  and
+               Sundararajan, Mukund  and
+               Dhamdhere, Kedar},
+  booktitle = {Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  year      = {2018},
+  address   = {Melbourne, Australia},
+  publisher = {Association for Computational Linguistics},
+  url       = {https://www.aclweb.org/anthology/P18-1176},
+  doi       = {10.18653/v1/P18-1176},
+  pages     = {1896--1906}
+}
+
+@article{Ribeiro2016WhyClassifier,
+  title   = {{"Why should i trust you?" Explaining the predictions of any classifier}},
+  year    = {2016},
+  journal = {Proceedings of the ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  author  = {Ribeiro, Marco Tulio and Singh, Sameer and Guestrin, Carlos},
+  pages   = {1135--1144},
+  volume  = {13-17-Augu},
+  isbn    = {9781450342322},
+  doi     = {10.1145/2939672.2939778},
+  arxivid = {1602.04938}
+}
+
+@article{Lundberg2017APredictions,
+  title   = {{A unified approach to interpreting model predictions}},
+  year    = {2017},
+  journal = {Advances in Neural Information Processing Systems},
+  author  = {Lundberg, Scott M. and Lee, Su In},
+  number  = {Section 2},
+  pages   = {4766--4775},
+  volume  = {2017-Decem},
+  issn    = {10495258},
+  arxivid = {1705.07874}
+}
+
+@article{Montavon2018MethodsNetworks,
+  title     = {{Methods for interpreting and understanding deep neural networks}},
+  year      = {2018},
+  journal   = {Digital Signal Processing: A Review Journal},
+  author    = {Montavon, Grégoire and Samek, Wojciech and M{\"{u}}ller, Klaus Robert},
+  pages     = {1--15},
+  volume    = {73},
+  publisher = {Elsevier Inc.},
+  url       = {https://doi.org/10.1016/j.dsp.2017.10.011},
+  doi       = {10.1016/j.dsp.2017.10.011},
+  issn      = {10512004},
+  arxivid   = {1706.07979},
+  keywords  = {Activation maximization, Deep neural networks, Layer-wise relevance propagation, Sensitivity analysis, Taylor decomposition}
+}
+
+@article{Karpov2020,
+  author  = {Karpov, Pavel and Godin, Guillaume and Tetko, Igor V},
+  doi     = {10.1186/s13321-020-00423-w},
+  issn    = {1758-2946},
+  journal = {Journal of Cheminformatics},
+  number  = {1},
+  pages   = {17},
+  title   = {{Transformer-CNN: Swiss knife for QSAR modeling and interpretation}},
+  url     = {https://doi.org/10.1186/s13321-020-00423-w},
+  volume  = {12},
+  year    = {2020}
+}
+
+@inproceedings{kishimoto2019depth,
+  title     = {Depth-First Proof-Number Search with Heuristic Edge Cost and Application to Chemical Synthesis Planning},
+  author    = {Kishimoto, Akihiro and Buesser, Beat and Chen, Bei and Botea, Adi},
+  booktitle = {Advances in Neural Information Processing Systems},
+  pages     = {7224--7234},
+  year      = {2019}
 }
