rewritten transformer explanation

--- a/References/references.bib
+++ b/References/references.bib
@@ -2551,3 +2551,23 @@
   pages     = {7224--7234},
   year      = {2019}
 }
+
+
+@article{Kim2021GenerativeCT,
+  author  = {Kim, Hyunseung and Na, Jonggeol and Lee, Won Bo},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {12},
+  pages   = {5804-5814},
+  title   = {Generative Chemical Transformer: Neural Machine Learning of Molecular Geometric Structures from Chemical Language via Attention},
+  volume  = {61},
+  year    = {2021}
+}
+
+@article{Niu2021AttnReview,
+  author  = {Zhaoyang Niu and Guoqiang Zhong and Hui Yu},
+  journal = {Neurocomputing},
+  pages   = {48-62},
+  title   = {A review on the attention mechanism of deep learning},
+  volume  = {452},
+  year    = {2021}
+}
