blurb about the molecular transformer

--- a/References/references.bib
+++ b/References/references.bib
@@ -2571,3 +2571,14 @@
   volume  = {452},
   year    = {2021}
 }
+
+@misc{Bjerrum2017SMILESaugmentation,
+  doi       = {10.48550/ARXIV.1703.07076},
+  url       = {https://arxiv.org/abs/1703.07076},
+  author    = {Bjerrum, Esben Jannik},
+  keywords  = {Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {SMILES Enumeration as Data Augmentation for Neural Network Modeling of Molecules},
+  publisher = {arXiv},
+  year      = {2017},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
