everything working at the moment

--- a/Dedication/dedication.tex
+++ b/Dedication/dedication.tex
@@ -4,4 +4,6 @@
 
 I would like to dedicate this thesis to my loving parents \dots
 
+WM acknowledges the support of the Gates Cambridge Trust.
+
 \end{dedication}
