--- a/References/references.bib
+++ b/References/references.bib
@@ -27,7 +27,7 @@
 @misc{Kovacs2020MolecularExplainer,
   title        = {{Molecular Transformer Explainer}},
   author       = {Kovacs, David P and McCorkindale, William and Lee, Alpha A.},
-  howpublished = {\url{https://github.com/davkovacs/MTExplainer.git}}
+  howpublished = {https://github.com/davkovacs/MTExplainer.git}
 }
 
 @article{Bender2018,
@@ -110,7 +110,7 @@
 @misc{McCorkindale2020SOAPGP,
   title        = {{SOAPGP}},
   author       = {McCorkindale, William},
-  howpublished = {\url{https://github.com/wjm41/soapgp.git}}
+  howpublished = {https://github.com/wjm41/soapgp.git}
 }
 
 @article{Husinec2011AnnulationsDerivatives,
@@ -732,7 +732,7 @@
 @misc{ElsevierReaxysDatabase,
   title        = {{Reaxys Database}},
   author       = {{Elsevier}},
-  howpublished = {\url{https://www.reaxys.com/}}
+  howpublished = {https://www.reaxys.com/}
 }
 
 
@@ -762,19 +762,19 @@
 @misc{rdkit,
   author       = {Greg Landrum},
   title        = {R{DK}it: Open-source cheminformatics},
-  howpublished = {\url{http://www.rdkit.org}}
+  howpublished = {http://www.rdkit.org}
 } 
 
 @misc{soapxx,
   author       = {Poelking, Carl},
   title        = {soapxx},
-  howpublished = {\url{https://github.com/capoe/soapxx}}
+  howpublished = {https://github.com/capoe/soapxx}
 } 
 
 @misc{moonshot2020,
   author       = {{PostEra Inc.}},
   title        = {{COVID} Moonshot},
-  howpublished = {\url{https://postera.ai/covid}}
+  howpublished = {https://postera.ai/covid}
 }
 
 @article{dscribe,
@@ -1053,7 +1053,7 @@
   author       = {Howard, Jeremy and others},
   year         = {2018},
   publisher    = {GitHub},
-  howpublished = {\url{https://github.com/fastai/fastai}}
+  howpublished = {https://github.com/fastai/fastai}
 }
 
 @article{schwaller2019molecular,
