--- a/thesis.tex
+++ b/thesis.tex
@@ -104,8 +104,12 @@
 
 \ifdefineChapter
  	% \includeonly{Chapters/Preface/preface}
+ 	% \includeonly{Chapters/Background/background}
+ 	\includeonly{Chapters/Ranking/ranking}
+ 	% \includeonly{Chapters/Fresco/fresco}
+ 	% \includeonly{Chapters/Transformer/transformer}
  	% \includeonly{Chapters/Crude/test}
- 	\includeonly{Chapters/Fresco/fresco}
+
 \fi
 
 % ******************************** Front Matter ********************************
