--- a/thesis.tex
+++ b/thesis.tex
@@ -105,8 +105,8 @@
 \ifdefineChapter
  	% \includeonly{Chapters/Preface/preface}
  	% \includeonly{Chapters/Background/background}
- 	\includeonly{Chapters/Ranking/ranking}
- 	% \includeonly{Chapters/Fresco/fresco}
+ 	% \includeonly{Chapters/Ranking/ranking}
+ 	\includeonly{Chapters/Fresco/fresco}
  	% \includeonly{Chapters/Transformer/transformer}
  	% \includeonly{Chapters/Crude/test}
 
