completed SMILES blurbs, started SMARTS

--- a/References/references.bib
+++ b/References/references.bib
@@ -2576,3 +2576,25 @@
   year      = {2017},
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
+
+
+@article{Heller2013InChI,
+  author  = {Heller, Stephen and McNaught, Alan and Stein, Stephen and Tchekhovskoi, Dmitrii and Pletnev, Igor},
+  journal = {Journal of Cheminformatics},
+  number  = {1},
+  pages   = {7},
+  title   = {InChI - the worldwide chemical structure identifier standard},
+  volume  = {5},
+  year    = {2013}
+}
+
+@article{Krenn2020Selfies,
+  author  = {Mario Krenn and Florian H{\"a}se and AkshatKumar Nigam and Pascal Friederich and Alan Aspuru-Guzik},
+  journal = {Machine Learning: Science and Technology},
+  month   = {oct},
+  number  = {4},
+  pages   = {045024},
+  title   = {Self-referencing embedded strings (SELFIES): A 100% robust molecular string representation},
+  volume  = {1},
+  year    = {2020}
+}
