--- a/thesis.tex
+++ b/thesis.tex
@@ -104,9 +104,9 @@
 
 \ifdefineChapter
  	% \includeonly{Chapters/Preface/preface}
- 	% \includeonly{Chapters/Background/background}
+ 	\includeonly{Chapters/Background/background}
  	% \includeonly{Chapters/Ranking/ranking}
- 	\includeonly{Chapters/Fresco/fresco}
+ 	% \includeonly{Chapters/Fresco/fresco}
  	% \includeonly{Chapters/Transformer/transformer}
  	% \includeonly{Chapters/Crude/test}
 
