added missing retrosynthesis refs

--- a/References/references.bib
+++ b/References/references.bib
@@ -2598,3 +2598,39 @@
   volume  = {1},
   year    = {2020}
 }
+
+@article{Walters1998overview,
+  author  = {W.Patrick Walters and Matthew T Stahl and Mark A Murcko},
+  journal = {Drug Discovery Today},
+  number  = {4},
+  pages   = {160-178},
+  title   = {Virtual screening---an overview},
+  volume  = {3},
+  year    = {1998}
+}
+
+@article{Corey1985ComputerAssistedSynthesis,
+  title   = {{Computer-assisted analysis in organic synthesis}},
+  year    = {1985},
+  journal = {Science},
+  author  = {Corey, E J and Long, A K and Rubenstein, S D},
+  number  = {4698},
+  month   = {4},
+  pages   = {408},
+  volume  = {228},
+  url     = {http://science.sciencemag.org/content/228/4698/408.abstract},
+  doi     = {10.1126/science.3838594}
+}
+
+@article{Klucznik2018EfficientLaboratory,
+  title    = {{Efficient Syntheses of Diverse, Medicinally Relevant Targets Planned by Computer and Executed in the Laboratory}},
+  year     = {2018},
+  journal  = {Chem},
+  author   = {Klucznik, Tomasz and Mikulak-Klucznik, Barbara and McCormack, Michael P. and Lima, Heather and Szymku{\'{c}}, Sara and Bhowmick, Manishabrata and Molga, Karol and Zhou, Yubai and Rickershauser, Lindsey and Gajewska, Ewa P. and Toutchkine, Alexei and Dittwald, Piotr and Startek, Michał P. and Kirkovits, Gregory J. and Roszak, Rafał and Adamski, Ariel and Sieredzi{\'{n}}ska, Bianka and Mrksich, Milan and Trice, Sarah L.J. and Grzybowski, Bartosz A.},
+  number   = {3},
+  pages    = {522--532},
+  volume   = {4},
+  doi      = {10.1016/j.chempr.2018.02.002},
+  issn     = {24519294},
+  keywords = {Chematica, artificial intelligence, chemical networks and graphs, computer-assisted synthesis, large-scale calculations, organic synthesis}
+}
