--- a/References/references.bib
+++ b/References/references.bib
@@ -2634,3 +2634,12 @@
   issn     = {24519294},
   keywords = {Chematica, artificial intelligence, chemical networks and graphs, computer-assisted synthesis, large-scale calculations, organic synthesis}
 }
+
+@article{Limban2018StrucuralAlerts,
+  author  = {Carmen Limban and Diana C. Nu{\c t}{\u a} and Cornel Chiri{\c t}{\u a} and Simona Negreș and Andreea L. Arsene and Marina Goumenou and Spyros P. Karakitsios and Aristidis M. Tsatsakis and Dimosthenis A. Sarigiannis},
+  journal = {Toxicology Reports},
+  pages   = {943-953},
+  title   = {The use of structural alerts to avoid the toxicity of pharmaceuticals},
+  volume  = {5},
+  year    = {2018}
+}
