--- a/References/references.bib
+++ b/References/references.bib
@@ -623,6 +623,17 @@
   publisher = {ACS Publications}
 }
 
+@@article{morgan1965fingerprints,
+  author  = {Morgan, H. L.},
+  journal = {Journal of Chemical Documentation},
+  number  = {2},
+  pages   = {107-113},
+  title   = {The Generation of a Unique Machine Description for Chemical Structures-A Technique Developed at Chemical Abstracts Service.},
+  volume  = {5},
+  year    = {1965}
+}
+
+
 @inproceedings{duvenaud2015convolutional,
   title     = {Convolutional networks on graphs for learning molecular fingerprints},
   author    = {Duvenaud, David K and Maclaurin, Dougal and Iparraguirre, Jorge and Bombarell, Rafael and Hirzel, Timothy and Aspuru-Guzik, Al{\'a}n and Adams, Ryan P},
