--- a/References/references.bib
+++ b/References/references.bib
@@ -2654,3 +2654,13 @@
   volume  = {5},
   year    = {2018}
 }
+
+@article{baldi2010similarity,
+  author  = {Baldi, Pierre and Nasr, Ramzi},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {7},
+  pages   = {1205-1222},
+  title   = {When is Chemical Similarity Significant? The Statistical Distribution of Chemical Similarity Scores and Its Extreme Values},
+  volume  = {50},
+  year    = {2010}
+}
