--- a/References/references.bib
+++ b/References/references.bib
@@ -2664,3 +2664,23 @@
   volume  = {50},
   year    = {2010}
 }
+
+@article{Maggiora2014similarity,
+  author  = {Maggiora, Gerald and Vogt, Martin and Stumpfe, Dagmar and Bajorath, J{\"u}rgen},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {8},
+  pages   = {3186-3204},
+  title   = {Molecular Similarity in Medicinal Chemistry},
+  volume  = {57},
+  year    = {2014}
+}
+
+@article{Willet1998similarity,
+  author  = {Willett, Peter and Barnard, John M. and Downs, Geoffrey M.},
+  journal = {Journal of Chemical Information and Computer Sciences},
+  number  = {6},
+  pages   = {983-996},
+  title   = {Chemical Similarity Searching},
+  volume  = {38},
+  year    = {1998}
+}
