--- a/References/references.bib
+++ b/References/references.bib
@@ -2684,3 +2684,50 @@
   volume  = {38},
   year    = {1998}
 }
+
+@article{oboyle2016benchmark,
+  author  = {O'Boyle, Noel M. and Sayle, Roger A.},
+  journal = {Journal of Cheminformatics},
+  number  = {1},
+  pages   = {36},
+  title   = {Comparing structural fingerprints using a literature-based similarity benchmark},
+  volume  = {8},
+  year    = {2016}
+}
+
+@article{riniker2013benchmark,
+  author  = {Riniker, Sereina and Landrum, Gregory A.},
+  journal = {Journal of Cheminformatics},
+  number  = {1},
+  pages   = {26},
+  title   = {Open-source platform to benchmark fingerprints for ligand-based virtual screening},
+  volume  = {5},
+  year    = {2013}
+}
+
+@book{johnson1990concepts,
+  title     = {Concepts and applications of molecular similarity},
+  author    = {Johnson, Mark A and Maggiora, Gerald M},
+  year      = {1990},
+  publisher = {Wiley}
+}
+
+@article{maggiora2006cliffs,
+  author  = {Maggiora, Gerald M.},
+  journal = {Journal of Chemical Information and Modeling},
+  number  = {4},
+  pages   = {1535-1535},
+  title   = {On Outliers and Activity CliffsWhy QSAR Often Disappoints},
+  volume  = {46},
+  year    = {2006}
+}
+
+@article{martin2002similar,
+  author  = {Martin, Yvonne C. and Kofron, James L. and Traphagen, Linda M.},
+  journal = {Journal of Medicinal Chemistry},
+  number  = {19},
+  pages   = {4350-4358},
+  title   = {Do Structurally Similar Molecules Have Similar Biological Activity?},
+  volume  = {45},
+  year    = {2002}
+}
