--- a/References/references.bib
+++ b/References/references.bib
@@ -2731,3 +2731,13 @@
   volume  = {45},
   year    = {2002}
 }
+
+@article{sandfort2020yield,
+  author  = {Frederik Sandfort and Felix Strieth-Kalthoff and Marius K{\"u}hnemund and Christian Beecks and Frank Glorius},
+  journal = {Chem},
+  number  = {6},
+  pages   = {1379-1390},
+  title   = {A Structure-Based Platform for Predicting Chemical Reactivity},
+  volume  = {6},
+  year    = {2020}
+}
