--- a/References/references.bib
+++ b/References/references.bib
@@ -623,7 +623,7 @@
   publisher = {ACS Publications}
 }
 
-@@article{morgan1965fingerprints,
+@article{morgan1965fingerprints,
   author  = {Morgan, H. L.},
   journal = {Journal of Chemical Documentation},
   number  = {2},
