begun working on docking

--- a/References/references.bib
+++ b/References/references.bib
@@ -2752,3 +2752,10 @@
   volume  = {6},
   year    = {2020}
 }
+
+@article{Lyu2023Expansion,
+  author  = {Lyu, Jiankun and Irwin, John J. and Shoichet, Brian K.},
+  journal = {Nature Chemical Biology},
+  title   = {Modeling the expansion of virtual screening libraries},
+  year    = {2023}
+}
